<resources>
    <string name="app_name">Zaat</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="facebook_app_id">242135343534022</string>
    <string name="fb_login_protocol_scheme">fb242135343534022</string>
    <string name="or">or</string>
    <string name="title">Title</string>
    <string name="your_memory">Your memory</string>
    <string name="add_memory">Add memory</string>
    <string name="memories">Memories</string>
    <string name="edit_memory">Edit Memory</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">Follow</string>
    <string name="searchHint">Username</string>
    <string name="unfollow">Unfollow</string>
    <string name="make_public">Make memory public</string>
    <string name="search">Search</string>
    <string name="world">World</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="love">Love</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="channel_name">Memories notification</string>
    <string name="memory">Memory</string>
    <string name="write_comment">Write your comment</string>
    <string name="people_reacted">People who reacted</string>
    <string name="notifications">Notifications</string>

    <string name="notification_comment">commented on your memory</string>
    <string name="notification_react">reacted love on your memory</string>

    <string name="memory_deleted">Memory deleted</string>
    <string name="edit_profile">Edit profile</string>

    <string name="saved">Saved</string>
    <string name="big_image">This image is very big, Select another</string>
</resources>